--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "radix-cli",
-  "version": "0.0.1",
+  "name": "radix1993-cli",
+  "version": "0.0.4",
   "description": "A simple CLI for creating your projects",
   "bin": {
     "radix": "bin/radix"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Expendo/radix.git"
+    "url": "git+https://github.com/arcsin1/radix.git"
   },
   "keywords": [
     "radix",
@@ -18,9 +18,9 @@
   "author": "radix",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Expendo/radix/issues"
+    "url": "https://github.com/arcsin1/radix/issues"
   },
-  "homepage": "https://github.com/Expendo/radix#readme",
+  "homepage": "https://github.com/arcsin1/radix#readme",
   "dependencies": {
     "chalk": "^1.1.3",
     "cli-table": "^0.3.1",
@@ -28,5 +28,10 @@
     "download-git-repo": "^1.0.0",
     "inquirer": "^3.0.6",
     "ora": "^1.2.0"
+  },
+  "main": "utils.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "utils.js"
   }
 }
