--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "es6",
     "template"
   ],
-  "author": "radix",
+  "author": "90°",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/arcsin1/radix/issues"
